add connection and other fields

--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "powerful-citadel-88001",
+  "version": "1.0.0",
+  "description": "",
+  "main": "config.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "apiai": "^4.0.3",
+    "body-parser": "^1.19.0",
+    "dialogflow": "^0.9.1",
+    "express": "^4.17.0",
+    "request": "^2.88.0"
   }
 }
